[metadata]
name = SLIX
version = 2.0.0
author = Jan Andre Reuter, Miriam Menzel
author_email = j.reuter@fz-juelich.de, m.menzel@fz-juelich.de
url = https://github.com/3d-pli/SLIX
description = SLIX allows an automated evaluation of SLI measurements and generates different parameter maps.
license_file = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
classifiers = 
	Programming Language :: Python :: 3
	License :: OSI Approved :: MIT License
	Operating System :: OS Independent

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires = 
	appdirs
	tifffile
	numpy
	nibabel
	h5py
	pillow
	numba
	matplotlib
	tqdm
	scipy
tests_require = 
	pytest
	flake8
	pytest-cov
python_requires = 
	>= 3.6

[options.entry_points]
console_scripts =
    SLIXParameterGenerator = SLIX.cmd_full_image:main
    SLIXLineplotParameterGenerator = SLIX.cmd_line_profile:main
